kubernetes/infrastructure/observability/dashboards/hubble/base/hubble-securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble-oidc
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble
  oidc:
    provider:
      issuer: https://iam.timourhomelab.org/realms/kubernetes
      authorizationEndpoint: https://iam.timourhomelab.org/realms/kubernetes/protocol/openid-connect/auth
      tokenEndpoint: https://iam.timourhomelab.org/realms/kubernetes/protocol/openid-connect/token
    clientIDRef:
      name: hubble-oidc-credentials
      group: ""
      kind: Secret
    clientSecret:
      name: hubble-oidc-credentials
    cookieNames:
      accessToken: AccessToken-Hubble
      idToken: IdToken-Hubble
    redirectURL: https://hubble.timourhomelab.org/oauth2/callback
    logoutPath: /oauth2/logout
    forwardAccessToken: true
    refreshToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
  jwt:
    providers:
      - name: keycloak
        issuer: https://iam.timourhomelab.org/realms/kubernetes
        remoteJWKS:
          uri: https://iam.timourhomelab.org/realms/kubernetes/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - AccessToken-Hubble
  authorization:
    defaultAction: Deny
    rules:
      - name: platform-sre-security
        action: Allow
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: groups
                valueType: StringArray
                values: ["cluster-admins", "platform-engineers", "sre-team", "security-team"]
